--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
 
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "react-native-material-textfield": "^0.12.0"
   },
 
   "devDependencies": {
@@ -42,7 +43,6 @@
   "dependencies": {
     "prop-types": "^15.5.9",
     "react-native-material-buttons": "^0.5.0",
-    "react-native-material-ripple": "^0.8.0",
-    "react-native-material-textfield": "^0.12.0"
+    "react-native-material-ripple": "^0.8.0"
   }
 }
