--- a/package.json
+++ b/package.json
@@ -41,8 +41,6 @@
   },
 
   "dependencies": {
-    "prop-types": "^15.5.9",
-    "react-native-material-buttons": "^0.5.0",
-    "react-native-material-ripple": "^0.8.0"
+    "prop-types": "^15.5.9"
   }
 }
